--- a/css/modal.css
+++ b/css/modal.css
@@ -1,3 +1,22 @@
+/* modal */
+.modal-dialog{
+  max-width: 600px;
+}
+
+.modal-header{
+border-bottom: 0px;
+}
+
+
+.modal-content{
+background-color: transparent;
+border: 0px ;
+}
+
+.modal-body{
+padding: 0px;    
+}
+
 .close:not(:disabled):not(.disabled) {
 cursor: pointer;
 color: #fff;
@@ -168,3 +187,4 @@ textarea {
   margin-top: -20px;
   text-align: right;
 }
+
