--- a/css/Home.css
+++ b/css/Home.css
@@ -35,7 +35,28 @@ padding: .25rem .5rem
 .btn-primary {
 color: #fff;
 background-color:rgba(217,58,38, 0.8) ;
-border-color: rgba(217,58,38,0.8);}
+border-color: rgba(217,58,38,0.8);
+}
+
+.btn-primary:hover {
+color: #fff;
+background: #111;
+border-color: rgba(255,255,255,0.4)
+}
+
+.btn-primary:active {
+color: #fff;
+background: #111;
+border-color: rgba(255,255,255,0.4)
+}
+
+.btn-primary:focus {
+color: #fff;
+background: #111;
+border-color: rgba(255,255,255,0.4)
+}
+ 
+
 
 .imgcontainer {
 position:relative;
@@ -261,79 +282,7 @@ footer ul li{
 list-style: none;
 }
 
-footer ul li a{
-width: 60px;
-height:60px;
-color:#333;
-background: #DCDCDC;
-text-align: center;
-line-height: 56px;
-font-size: 35px;
-margin: 0 10px;
-display: block;
-border-radius: 50%;
-position: relative;
-overflow: hidden;
-border: 3px solid #DCDCDC;
-z-index: 1;
-}
 
-footer ul li a .fab{
-position: relative;
-color: #222;
-transition: .5s;
-}
-
-footer ul li a:hover .fab{
-color: #DCDCDC;
-transform: rotateY(360deg)
-}
-
-footer ul li a .fas{
-position: relative;
-color: #222;
-transition: .5s;
-}
-
-footer ul li a:hover .fas{
-color: #DCDCDC;
-transform: rotateY(360deg)
-}
-
-footer ul li a:before{
-content: '';
-position: absolute;
-top: 100%;
-left: 0;
-width: 100%;
-height: 100%;
-transition: .5s;
-z-index: 2;
-}
-
-footer ul li a:hover:before{
-top: 0;
-}
-
-footer ul li:nth-child(1) a:before{
-background: #c71610;
-}
-
-footer ul li:nth-child(2) a:before{
-background: #dd4b39;
-}
-
-footer ul li:nth-child(3) a:before{
-background: #C32AA3;
-}
-
-footer ul li:nth-child(4) a:before{
-background: #3b5998;
-}
-
-footer ul li:nth-child(5) a:before{
-background: #012169;
-}
 
 .arrow{
 font-size: 3rem;
